# django_ecommerce2

./: LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.in  requirements.txt
carts/: admin.py  apps.py  mixins.py  models.py  serializers.py  signals.py  urls.py  urls_checkout.py  views.py
carts/migrations/: 0001_initial.py  0002_auto_20160323_1746.py  0003_auto_20160325_1746.py  0004_alter_cart_id_alter_cartitem_id.py
django_ecommerce2/: api_test.py  asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
newsletter/: admin.py  forms.py  models.py  views.py
newsletter/migrations/: 0001_initial.py  0002_alter_signup_id.py
orders/: admin.py  apps.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_useraddress.py  0003_order.py  0004_auto_20160329_2001.py  0005_order_status.py  0006_usercheckout_braintree_id.py  0007_auto_20160411_1257.py  0008_auto_20160417_0102.py  0009_alter_order_id_alter_useraddress_id_and_more.py
products/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  pagination.py  serializers.py  signals.py  urls.py  urls_categories.py  views.py
products/migrations/: 0001_initial.py  0002_variation.py  0003_productimage.py  0004_auto_20160316_1702.py  0005_productfeatured.py  0006_alter_category_id_alter_product_id_and_more.py
templates/: about.html  base.html  example_fluid.html  example_text.txt  forms.html  head_css.html  home.html  javascript.html  navbar.html
templates/registration/: activate.html  login.html  (+11 more)
(+16 files in other folders)
