[project]
name = "django-ecommerce2"
version = "0.2.0"
description = "An improved e-commerce app built within django framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "braintree>=4.41.0",
    "crispy-bootstrap3>=2024.1",
    "django>=5.2",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.5",
    "django-filter>=25.2",
    "django-registration-redux>=2.13",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12",
]
